--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="converted_amount">Converted Amount</string>
     <string name="result">Result</string>
     <string name="error">Amount Field Required</string>
+    <string name="share_menu_item">Share</string>
 </resources>
